hw01-Kubernetes/kubernetes/hw1-health-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw1-health-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /hw01-Kubernetes/$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /()(.*)
          pathType: Prefix
          backend:
            service:
              name: hw1-health-app-service
              port:
                name: web
        - path: /otusapp/vlyulin($|/)(.*)
          pathType: Prefix
          backend:
            service:
              name: hw1-health-app-service
              port:
                name: web
